kube/7-airflow-scheduler-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: airflow
  name: airflow-scheduler
  labels:
    name: airflow-scheduler
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccountName: airflow-executor
      containers:        
        - name: scheduler
          image: <change>:<change>
          volumeMounts:
          - name: logs
            mountPath: /airflow/logs
          command: ["airflow"]
          args: ["scheduler"]
          imagePullPolicy: Always
          resources:
            limits:
              memory: "4096Mi"
            requests:
              cpu: "500m"
              memory: "2048Mi"
      volumes:
          - name: logs
            persistentVolumeClaim:
              claimName: nfs-airflow-logs
      # affinity:
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: run
      #           operator: In
      #           values:
      #           - airflow-webserver
      #       topologyKey: "kubernetes.io/hostname"
